--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@
     justify-content: space-around;
     margin: 100px auto;
 }
-
+@media (max-width: 650px) {
+    .ctime{
+        width: 100%;
+    }
+    
+}
 .ctime div {
     width: calc(80% / 4);
     display: flex;
@@ -35,4 +40,20 @@
     font-size: 18px;
     margin: 3px 0px;
     color: black;
+}
+
+.author {
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 25px;
+    color: #000790;
+    font-weight: bold;
+    width: 220px;
+}
+
+.author span {
+    font-family: 'Pixelify Sans', cursive;
+    font-size: 30px;
 }
